Views are now extending layout.pug.

--- a/views/404.pug
+++ b/views/404.pug
@@ -1,7 +1,6 @@
-doctype html
-html
-  head
-    title Pizza Shack
+extends layout.pug
 
-  body
-    h1 404 Page not found 
+block content
+
+  .error
+    h1 404 Page not found
