--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,6 @@
-doctype html
-html
-  head
-    title Pizza Shack
+extends layout.pug
 
-  body
-    h1 Welcome to the Pizza Shack!  
+block content
+
+  .welcome
+    h1 Welcome to the Pizza Shack!
