--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,10 @@ doctype html
 html
   head
     title Pizza Shack
+    include partials/styles.pug
 
   body
 
-  block content  
+    block content
+
+    include partials/scripts.pug
