--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,17 +5,10 @@ body {
 
 .welcome {
   text-align: center;
-}
-
-.welcome__text {
   color: red;
 }
 
-.welcome__image img {
-  max-height: 250px;
-  max-width: 250px;
-}
-
-.contact-form__submit {
-  text-align: right
+.welcome img {
+  height: 275px;
+  width: 350px;
 }
