Added favicon to index

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Pizza Shack
+    link(rel="icon" href="/images/code-braces.png")
     include partials/styles.pug
 
   body
