Added contact, login and register views and routes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,12 @@ html
 
   body
 
+    .nav-bar
+      a(href="/") Home
+      a(href="/contact") Contact Us
+      a(href="/login") Login
+      a(href="/register") Register
+
     block content
 
     include partials/scripts.pug
