--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,15 @@
 body {
-  background: khaki;
-  padding-top: 50px;
+  background: tomato;
 }
 
+/* Index styles */
 .welcome {
   text-align: center;
-  color: red;
+  color: white;
 }
 
 .welcome img {
   height: 275px;
   width: 350px;
+  border: solid 2px white;
 }
