--- a/views/partials/styles.pug
+++ b/views/partials/styles.pug
@@ -1,1 +1,3 @@
+link(rel="stylesheet" href="/css/nav.css")
 link(rel="stylesheet" href="/css/main.css")
+link(rel="stylesheet" href="/css/form.css")
