--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -3,10 +3,11 @@
   flex-direction: row;
   justify-content: center;
   background-color: tan;
+  height: 3rem;
 }
 
 .nav-bar a {
-  margin: 0 2rem;
+  margin: auto 2rem;
   text-decoration: none;
   font-size: 20px;
   color: white;
