--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,21 @@ block content
   .welcome
     h1 Welcome to the Pizza Shack!
 
-    img(src="/images/pizza.jpg")
+    .content
+
+      img(src="/images/pizza.jpg")
+        
+      .content-text
+        p.
+          The ancient Greeks covered their bread with oils, herbs and cheese.
+          You too can live like an ancient Greek at the Pizza Shack!
+          <em>Sandals and tunic required for service</em>
+
+        p.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
