Image sizing fix

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,9 @@ block content
 
     .content
 
-      img(src="/images/pizza.jpg")
-        
+      .content-img
+        img(src="/images/pizza.jpg")
+
       .content-text
         p.
           The ancient Greeks covered their bread with oils, herbs and cheese.
