--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,8 @@ block content
         img(src="/images/pizza.jpg")
 
       .content-text
+        h2 About Us
+
         p.
           The ancient Greeks covered their bread with oils, herbs and cheese.
           You too can live like an ancient Greek at the Pizza Shack!
